Source/WebKit/UIProcess/ios/PageClientImplIOS.h
@@ -243,9 +243,6 @@ private:
 
     void handleAutocorrectionContext(const WebAutocorrectionContext&) final;
 
-    Seconds doubleTapForDoubleClickDelay() final;
-    float doubleTapForDoubleClickRadius() final;
-
     void didFinishProcessingAllPendingMouseEvents() final { }
 
 #if HAVE(PENCILKIT)
